# rust_starter_project

./: Cargo.toml  build.rs
src/: main.rs
src/app/: app.rs  mod.rs
src/assets/: config.toml
src/lib/: cli.rs  config.rs  mod.rs
src/ui/: mod.rs  stopwatch.rs
