[package]
name = "hello_world"
authors = ["David Pfahler"]
description = "My first rust application"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
built = "0.5"
copy_to_output = "2.0"
glob = "0.3"
